tests/ui/lex_regex_no_match.stderr
error: This regex does not match the literal `bar`. This is likely a mistake, because the terminal will never be matched
 --> tests/ui/lex_regex_no_match.rs:6:23
  |
6 |     #[teleparse(regex("foo"), terminal(Key, Bar = "bar"))]
  |                       ^^^^^
